--- a/styles.css
+++ b/styles.css
@@ -359,15 +359,16 @@ main {
 
     #savings {
         width: 94%;
+        scroll-margin-top: 70px;
     }
 
     #savings-wordings h3 {
-      font-size: 1.1rem;
+      font-size: 1rem;
       white-space: normal; /* Allow line breaks */
     }
 
     #savings-wordings p {
-        font-size: .7rem;
+        font-size: .6rem;
         white-space: normal; /* Allow line breaks */
     }
 }
@@ -377,6 +378,7 @@ main {
 
     #savings {
         width: 94%;
+        scroll-margin-top: 70px;
     }
 
     #savings-wordings h3 {
@@ -395,6 +397,7 @@ main {
 
     #savings {
         width: 94%;
+        scroll-margin-top: 80px;
     }
 
     #savings-wordings h3 {
@@ -658,19 +661,19 @@ main {
 @media only screen and (max-width: 380px) {
 
     .banks-header p {
-      font-size: .6rem;
+      font-size: .5rem;
       white-space: normal; /* Allow line breaks */
       justify-content: center;
     }
 
     .bank-header p {
-        font-size: .5rem;
+        font-size: .4rem;
         white-space: normal; /* Allow line breaks */
         justify-content: center;
     }
 
     .banks-logo img {
-        min-width: 70%;
+        min-width: 60%;
         height: auto;
     }
 
