--- a/styles.css
+++ b/styles.css
@@ -199,6 +199,10 @@ main {
 
 @media only screen and (max-width: 380px) {
 
+    #home {
+        min-height: calc(100vh - 200px);
+    }
+
     #home h2 {
       font-size: 1.2rem;
       white-space: normal; /* Allow line breaks */
@@ -213,6 +217,10 @@ main {
 
 @media only screen and (min-width: 381px) and (max-width: 480px) {
 
+    #home {
+        min-height: calc(100vh - 200px);
+    }
+
     #home h2 {
       font-size: 1.3rem;
       white-space: normal; /* Allow line breaks */
@@ -226,6 +234,10 @@ main {
 
 
 @media only screen and (min-width: 481px) and (max-width: 500px) {
+
+    #home {
+        min-height: calc(100vh - 180px);
+    }
 
     #home h2 {
       font-size: 1.4rem;
