--- a/styles.css
+++ b/styles.css
@@ -52,16 +52,21 @@ nav ul {
     font-size: 1.5rem;
     color: white;
     font-family: 'Kanit', sans-serif;
+    border: 2px solid #e9ff74;
+    border-radius: 25px;
 }
 
 
 @media only screen and (max-width: 380px) {
     nav h1 a {
-        font-size: 1.1rem;
+        font-size: 1.2rem;
     }
     
     .list-item a {
-        font-size: 1rem;
+        font-size: .9rem;
+        padding-left: 13px;
+        padding-right: 10px;
+        padding-bottom: 1px;
     }
 }
 
@@ -72,7 +77,10 @@ nav ul {
     }
     
     .list-item a {
-        font-size: 1.2rem;
+        font-size: 1rem;
+        padding-left: 14px;
+        padding-right: 11px;
+        padding-bottom: 1px;
     }
 }
 
@@ -83,7 +91,10 @@ nav ul {
     }
     
     .list-item a {
-        font-size: 1.3rem;
+        font-size: 1rem;
+        padding-left: 15px;
+        padding-right: 12px;
+        padding-bottom: 1px;
     }
 }
 
@@ -94,7 +105,10 @@ nav ul {
     }
     
     .list-item a {
-        font-size: 1.4rem;
+        font-size: 1.1rem;
+        padding-left: 16px;
+        padding-right: 13px;
+        padding-bottom: 1px;
     }
 }
 
@@ -105,7 +119,10 @@ nav ul {
     }
     
     .list-item a {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
+        padding-left: 16px;
+        padding-right: 13px;
+        padding-bottom: 1px;
     }
 }
 
@@ -115,7 +132,10 @@ nav ul {
     }
     
     .list-item a {
-        font-size: 1.6rem;
+        font-size: 1.2rem;
+        padding-left: 16px;
+        padding-right: 13px;
+        padding-bottom: 1px;
     }
 }
 
@@ -125,7 +145,10 @@ nav ul {
     }
     
     .list-item a {
-        font-size: 1.7rem;
+        font-size: 1.3rem;
+        padding-left: 16px;
+        padding-right: 13px;
+        padding-bottom: 1px;
     }
 }
 
@@ -136,7 +159,10 @@ nav ul {
     }
     
     .list-item a {
-        font-size: 1.7rem;
+        font-size: 1.3rem;
+        padding-left: 16px;
+        padding-right: 13px;
+        padding-bottom: 1px;
     }
 }
 
@@ -161,8 +187,9 @@ main {
 
 #home {
     width: 94%;
-    min-height: calc(100vh - 110px);
+    min-height: calc(100vh - 250px);
     background-color: #CCEEBC;
+    color: black;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -172,17 +199,16 @@ main {
     margin-top: 80px;
     white-space: nowrap;
     scroll-margin-top: 100px;
-    margin-bottom: 70px;
+    margin-bottom: 60px;
 }
 
 
 #home h2 {
     font-size: 3.1rem;
-    color: black;
     font-family: 'Poppins', sans-serif;
     margin-bottom: 4rem;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 #home p {
@@ -190,36 +216,14 @@ main {
     color: black;
     font-family: 'Poppins', sans-serif;
     white-space: normal; /* Allow line breaks */
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 
 
 
 @media only screen and (max-width: 380px) {
-
-    #home {
-        min-height: calc(100vh - 200px);
-    }
-
-    #home h2 {
-      font-size: 1.2rem;
-      white-space: normal; /* Allow line breaks */
-    }
-
-    #home p {
-        font-size: .8rem;
-        white-space: normal; /* Allow line breaks */
-    }
-}
-
-
-@media only screen and (min-width: 381px) and (max-width: 480px) {
-
-    #home {
-        min-height: calc(100vh - 200px);
-    }
 
     #home h2 {
       font-size: 1.3rem;
@@ -233,14 +237,10 @@ main {
 }
 
 
-@media only screen and (min-width: 481px) and (max-width: 500px) {
-
-    #home {
-        min-height: calc(100vh - 180px);
-    }
+@media only screen and (min-width: 381px) and (max-width: 480px) {
 
     #home h2 {
-      font-size: 1.4rem;
+      font-size: 1.5rem;
       white-space: normal; /* Allow line breaks */
     }
 
@@ -250,7 +250,8 @@ main {
     }
 }
 
-@media only screen and (min-width: 501px) and (max-width: 600px) {
+
+@media only screen and (min-width: 481px) and (max-width: 500px) {
 
     #home h2 {
       font-size: 1.6rem;
@@ -263,7 +264,7 @@ main {
     }
 }
 
-@media only screen and (min-width: 601px) and (max-width: 768px) {
+@media only screen and (min-width: 501px) and (max-width: 600px) {
 
     #home h2 {
       font-size: 1.8rem;
@@ -276,16 +277,29 @@ main {
     }
 }
 
-
-@media only screen and (min-width: 769px) and (max-width: 900px) {
+@media only screen and (min-width: 601px) and (max-width: 768px) {
 
     #home h2 {
-      font-size: 2rem;
+      font-size: 1.9rem;
       white-space: normal; /* Allow line breaks */
     }
 
     #home p {
-        font-size: 1.2rem;
+        font-size: 1.3rem;
+        white-space: normal; /* Allow line breaks */
+    }
+}
+
+
+@media only screen and (min-width: 769px) and (max-width: 900px) {
+
+    #home h2 {
+      font-size: 2.1rem;
+      white-space: normal; /* Allow line breaks */
+    }
+
+    #home p {
+        font-size: 1.4rem;
         white-space: normal; /* Allow line breaks */
     }
 }
@@ -299,20 +313,24 @@ main {
     }
 
     #home p {
-        font-size: 1.3rem;
+        font-size: 1.4rem;
         white-space: normal; /* Allow line breaks */
     }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1800px) {
 
+    #home {
+        width: 90%
+    }
+
     #home h2 {
-        font-size: 2.5rem;
+        font-size: 2.4rem;
         white-space: normal; /* Allow line breaks */
     }
   
     #home p {
-        font-size: 1.4rem;
+        font-size: 1.5rem;
         white-space: normal; /* Allow line breaks */
     }
 }
