--- a/styles.css
+++ b/styles.css
@@ -547,7 +547,7 @@ main {
     display: grid;
     width: 100%;
     height: auto;
-    grid-template-columns: 1fr 2fr 2fr 1fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr 1fr;
     text-align: center;
     border-radius: 30px;
 }
@@ -560,7 +560,7 @@ main {
 .banks-header {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     padding-top: 8px;
     padding-bottom: 8px;
 }
@@ -568,20 +568,6 @@ main {
 .banks-header p {
     font-size: 1.3rem;
     font-family: 'Poppins', sans-serif;
-}
-
-.bank-header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-top: 8px;
-    padding-bottom: 8px;
-}
-
-.bank-header p {
-    font-size: 1.2rem;
-    font-family: 'Poppins', sans-serif;
-    margin-right: 5px;
 }
 
 .banks-logo {
@@ -596,7 +582,6 @@ main {
     width: 25%;
     height: auto;
 }
-
 
 .banks-savings {
     display: flex;
@@ -614,72 +599,54 @@ main {
     font-family: 'Poppins', sans-serif;  
 }
 
-
 .expand-button {
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 1.1rem;
+    background: none;
+    margin: 0;
+    padding: 0;
+    -webkit-user-select: none;  /* Chrome all / Safari all */
+    -moz-user-select: none;     /* Firefox all */
+    -ms-user-select: none;      /* IE 10+ */
+    user-select: none;          /* Likely future */   
 }
+
 
 .interest-details {
     display: none;
-    grid-column: 1 / span 4; /* Cover all five columns */
+    grid-column: 1 / span 4; /* Cover all four columns */
     position: relative;
     width: 100%;
 }
 
 .interest-details.visible {
     display: flex;
-    padding-left: 87px;
+    padding-left: 90px;
     padding-top: 10px;
     padding-bottom: 18px;
 }
 
-.details-header {
+.interest-details ul {
     text-align: left;
-    font-size: 1rem;
-    font-family: 'Poppins', sans-serif;
-    padding-bottom: 5px;
 }
 
-.interest-details ul li {
-    text-align: left;
-    font-size: 1rem;
+.interest-details li {
     font-family: 'Poppins', sans-serif;
-}
-
-
-.expand-button-2 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     font-size: 1.1rem;
 }
+
+.details-header {
+    font-size: 1rem;
+    font-family: 'Poppins', sans-serif;
+    padding-bottom: 4px;
+}
+
 
 .fa-chevron-up:hover,
 .fa-chevron-down:hover {
     cursor: pointer;
-}
-
-.key-features {
-    display: none;
-    grid-column: 1 / span 5; /* Cover all five columns */
-    position: relative;
-    width: 100%;
-}
-
-.key-features.visible {
-    display: flex;
-    padding-left: 87px;
-    padding-top: 10px;
-    padding-bottom: 18px;
-}
-
-.key-features ul li {
-    text-align: left;
-    font-size: 1rem;
-    font-family: 'Poppins', sans-serif;
 }
 
 
@@ -701,15 +668,8 @@ main {
 @media only screen and (max-width: 380px) {
 
     .banks-header p {
-      font-size: .5rem;
+      font-size: .7rem;
       white-space: normal; /* Allow line breaks */
-      justify-content: center;
-    }
-
-    .bank-header p {
-        font-size: .4rem;
-        white-space: normal; /* Allow line breaks */
-        justify-content: center;
     }
 
     .banks-logo img {
@@ -718,12 +678,12 @@ main {
     }
 
     .banks-savings {
-        font-size: .5rem;
+        font-size: .6rem;
         white-space: normal; /* Allow line breaks */
     }
 
     .banks-interest {
-        font-size: .5rem;
+        font-size: .6rem;
         white-space: normal; /* Allow line breaks */
     }
 
@@ -731,9 +691,6 @@ main {
         font-size: .6rem;
     }
 
-    .expand-button-2 {
-        font-size: .6rem;
-    }
 
     .interest-details.visible {
         display: flex;
@@ -749,18 +706,6 @@ main {
 
     .interest-details ul li {
         font-size: .5rem;
-    }
-
-    .key-features ul li {
-        font-size: .5rem;
-    }
-
-    .key-features.visible {
-        display: flex;
-        padding-left: 24px;
-        padding-right: 5px;
-        padding-top: 10px;
-        padding-bottom: 18px;
     }
 
     .update i {
@@ -1238,10 +1183,7 @@ main {
   
     .interest-details.visible {
         display: flex;
-        padding-left: 72px;
-        padding-right: 5px;
-        padding-top: 10px;
-        padding-bottom: 18px;
+
     }
   
     .interest-details ul p {
@@ -1249,21 +1191,9 @@ main {
     }
   
     .interest-details ul li {
-        font-size: 1.1rem;
+        
     }
-  
-    .key-features ul li {
-        font-size: 1.1rem;
-    }
-  
-    .key-features.visible {
-        display: flex;
-        padding-left: 72px;
-        padding-right: 5px;
-        padding-top: 10px;
-        padding-bottom: 18px;
-    }
-  
+
     .update i {
         font-size: 1rem;
     }
